# code/src/Profile/User/Presentation/Api/ChangeUserStatusAction.php
@@ -17,12 +17,12 @@ use Symfony\Contracts\Translation\TranslatorInterface;
 
 final readonly class ChangeUserStatusAction
 {
-    #[Route('/v1/users/self/status', name: 'api_user_status', methods: ['PUT'])]
+    #[Route('/v1/profile/user/status', name: 'api_user_status', methods: ['PUT'])]
     #[OA\Put(
-        path: '/api/v1/users/self/status',
+        path: '/api/v1/profile/user/status',
         description: 'Update user account status (activate/deactivate)',
         summary: 'Update user status',
-        tags: ['Users']
+        tags: ['Profile']
     )]
     #[OA\RequestBody(
         required: true,
